--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -6,14 +6,14 @@
       <input type="checkbox" name="completed" checked>
       <%= link_to "#{task[:title]}", task_path(task[:id]) %>
       ---
-      <%= link_to "Delete", destroy_path(task[:id]), method: :delete,
+      <%= link_to "Delete", task_path(task[:id]), method: :delete,
       data: {confirm: "Are you sure?"} %>
     <% else %>
       <input type="checkbox" name="completed">
       <a href=""></a>
       <%= link_to task[:title], task_path(task[:id]) %>
       ---
-      <%= link_to "Delete", destroy_path(task[:id]), method: :delete,
+      <%= link_to "Delete", task_path(task[:id]), method: :delete,
       data: {confirm: "Are you sure?"} %>
     <% end %>
   </li>
